# rust-otel-gcloud-example

./: Cargo.toml  README.md  compose.yaml
src/: exporter_type.rs  main.rs  tracer.rs
